// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datepicker > should render properly with format YYYY 1`] = `
<div>
  <div
    class="lunatic-input"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          class=""
          id="datepicker"
          placeholder="format: aaaa"
          type="text"
          value="1999"
        />
        <button
          aria-label="Close"
          class="react-datepicker__close-icon"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker > should render properly with format YYYY-MM 1`] = `
<div>
  <div
    class="lunatic-input"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          class=""
          id="datepicker"
          placeholder="format: mm / aaaa"
          type="text"
          value="01/1999"
        />
        <button
          aria-label="Close"
          class="react-datepicker__close-icon"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker > should render properly with format YYYY-MM-DD 1`] = `
<div>
  <div
    class="lunatic-input"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          class=""
          id="datepicker"
          placeholder="format: jj / mm / aaaa"
          type="text"
          value="01/01/1999"
        />
        <button
          aria-label="Close"
          class="react-datepicker__close-icon"
          tabindex="-1"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;
